# Campus-Health-Managing-System

./: .gitignore  .gitignore   5.17.cpp  CMakeLists.txt  README.md  resource.qrc
src/: AIService.cpp  AIService.h  CMakeCache.txt  CampusHealth  Makefile  cafeteriamenu.cpp  cafeteriamenu.h  canteen.cpp  canteen.h  cmake_install.cmake  datamanager.cpp  datamanager.h  interfaces.cpp  interfaces.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mealplanner.cpp  mealplanner.h  userdietmanager.cpp  userdietmanager.h
src/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/CampusHealth_autogen/: deps
src/CampusHealth_autogen/UVLADIE3JM/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
